
11-Aug-2005: new methods added into the JuxyTestCase:
    - JuxyTestCase.parse(String)
    - JuxyTestCase.print(org.w3c.dom.Document)
    - JuxyTestCase.assertXMLEquals(String, String)

10-Aug-2005: Juxy 0.6.7 released