@@ -9,5 +9,6 @@ src/org/tigris/juxy/xpath/XPathExpressionException.java, \
 src/org/tigris/juxy/util/DocumentsAssertionError.java, \
 src/org/tigris/juxy/util/DOMUtil.java, \
 src/org/tigris/juxy/util/StringUtil.java, \
+src/org/tigris/juxy/util/SAXSerializer.java, \
 src/org/tigris/juxy/util/XMLComparator.java
 
