@@ -3,7 +3,7 @@ package org.tigris.juxy.xpath;
 import junit.framework.TestCase;
 
 /**
- * $Id: UTestXPathFactory.java,v 1.1 2005-08-10 08:57:18 pavelsher Exp $
+ * $Id: UTestXPathFactory.java,v 1.2 2005-08-24 08:28:31 pavelsher Exp $
  *
  * @author Pavel Sher
  */
@@ -22,6 +22,6 @@ public class UTestXPathFactory extends TestCase {
 
     public void testCreateJavaXPath() {
         XPathExpr xpath = XPathFactory.createJava50XPath("/");
-        assertTrue(xpath instanceof Java50XPathExpr);
+        assertTrue(xpath instanceof JavaxXPathExpr);
     }
 }
